[package]
name = "cex_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
rand = "0.8"
rustls = "0.23.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.6"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = { version = "0.27.0", features = ["native-tls"] }
webpki-roots = "1.0.0"
